# spec-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: Architecture.md  Configuration.md
docs/superpowers/plans/: 2026-04-10-init-repo-opt-out.md
docs/superpowers/specs/: 2026-04-10-init-repo-opt-out-design.md
spec_agent/: __init__.py  agent.py  ast_extractor.py  cli.py  config.py  init_agent.py  ollama_setup.py
spec_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
spec_agent/backends/: anthropic_backend.py  base.py  factory.py  gemini_backend.py  github_backend.py  groq_backend.py  ollama_backend.py
spec_agent/tools/: __init__.py  fs_read.py  init_cache.py  wiki_index.py  wiki_read.py  wiki_search.py  wiki_write.py
tests/: conftest.py  test_agent.py  test_ast_extractor.py  test_backends.py  test_cli.py  test_config.py  test_fs_read.py  test_github_backend.py  test_groq_backend.py  test_init_agent.py  test_init_cache.py  test_ollama_setup.py  test_wiki_index.py  test_wiki_read.py  test_wiki_search.py  test_wiki_write.py
