[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "rich>=13.0",
]

[project.scripts]
spec-agent = "spec_agent.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["spec_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
